<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Switch
        android:id="@+id/switchSaveOnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="switchSave"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/switchSaveOff"
        android:textSize="16sp"
        android:thumbTint="@color/colorAccent" />

    <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="switchSave"
        android:text="@string/text_dark_mode"
        android:textSize="18sp"
        android:thumbTint="@color/colorAccent" />

    <Switch
        android:id="@+id/show_all_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:gravity="center"
        android:onClick="switchSave"
        android:text="@string/show_all_errors"
        android:textSize="16sp"
        android:thumbTint="@color/colorAccent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/import_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtExIm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ex_im_label"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnImport"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="initializeImport"
                android:text="@string/import_se" />

            <Button
                android:id="@+id/btnExport"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="create_import"
                android:text="@string/export"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>